src/components/shared/buttonIconOnly/styles.module.css
.button {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 8px;
    padding: 6px;
    border: none;
    outline: none;
    border-radius: 16px;
    color: rgb(255, 255, 255, 0.5);
    transition: background-color 0.1s ease-in-out 0s;
}

.button:hover {
    background-color: rgb(255, 255, 255, 0.05);
    color: rgb(255, 255, 255, 0.8);
    cursor:'pointer';
}

.button:focus-visible{
    outline: none;
    background-color: rgb(255, 255, 255, 0.05);
    color: rgb(255, 255, 255, 0.8);
}

.button:active{
    background-color: rgb(255, 255, 255, 0.05);
    transform: scale(0.95);
}

.iconWrapper {
    width: 16px;
    height: 16px;
    align-items: center;
    justify-content: center;
}

